fix breadcrumbs on small windows
Former-commit-id: ad08fee0616a16b37ee1e6e122b8ccfc90faf122

--- a/media/style/main.css
+++ b/media/style/main.css
@@ -282,6 +282,9 @@ div#newsitems .collapsible-heading-status, h2.semester .collapsible-heading-stat
     .subnav-wrapper li.newsec:before {
         content: " || ";
     }
+    div.breadcrumb ul {
+      margin-right: 0;
+    }
 }
 
 /* actions mods for base-wide */
